--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,11 +30,12 @@
         app:layout_constraintTop_toBottomOf="@+id/distance_display" />
 
     <TextView
-        android:id="@+id/time_display"
+        android:id="@+id/move_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:text="TextView"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -48,6 +49,6 @@
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/time_display" />
+        app:layout_constraintTop_toBottomOf="@+id/move_state" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
