--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,13 +35,13 @@
         android:id="@+id/move_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="15dp"
         android:text="TextView"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/runStatus" />
 
     <TextView
         android:id="@+id/distance_display"
@@ -84,5 +84,15 @@
         android:text="stop"
         app:layout_constraintStart_toEndOf="@+id/pause_button"
         app:layout_constraintTop_toBottomOf="@+id/load_button" />
+
+    <ImageView
+        android:id="@+id/runStatus"
+        android:layout_width="89dp"
+        android:layout_height="89dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@tools:sample/avatars" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
