--- a/static/styles.css
+++ b/static/styles.css
@@ -13,20 +13,46 @@ body {
 .modal {
     display: block;
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 10%;
+    width: 80%;
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
     z-index: 1000;
-    background: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+input[type="range"] {
+    width: 100%;
+    touch-action: manipulation;
 }
 
 .modal-content {
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+#timeBar {
+    display: flex;
+    width: 100%;
+    height: 30px;
+    background-color: lightgray;
+    border-radius: 10px;
+    overflow: hidden;
+    margin: 10px 0;
+}
+
+#timeBar .run {
+    background-color: green;
+    height: 100%;
+    border-right: 1px solid white;
+}
+
+#timeBar .walk {
+    background-color: blue;
+    height: 100%;
+    border-right: 1px solid white;
 }
 
 #display {
