--- a/static/styles.css
+++ b/static/styles.css
@@ -55,6 +55,10 @@ input[type="range"] {
     border-right: 1px solid white;
 }
 
+#timeBar :last-child {
+    border-right: none;
+}
+
 #display {
     display: flex;
     justify-content: center;
