--- a/static/styles.css
+++ b/static/styles.css
@@ -10,6 +10,11 @@ body {
     height: 250px;
 }
 
+#shareMap {
+    width: 100%;
+    height: 250px;
+}
+
 .modal {
     display: block;
     position: fixed;
