--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,8 @@
     <h1>Run Timer App</h1>
     <div id="map"></div>
 
+    <button id="leaderBoardButton">Open Leaderboard</button>
+
     <!-- SVG Feedback Area -->
     <div id="display">
 
@@ -99,6 +101,13 @@
             <input type="text" id="nameInput" name="name" required>
             <button type="submit">Share</button>
         </form>
+    </div>
+
+    <div id="leaderboardModal" class="modal hidden">
+        <button id="closeLeaderboard">Close Leaderboard</button>
+        <div id="leaderDisplay">
+
+        </div>
     </div>
 
 </body>
