--- a/static/styles.css
+++ b/static/styles.css
@@ -2,12 +2,108 @@ body {
     display: flex;
     flex-direction: column;
     gap: 25px;
-    align-items: center;
+    align-items: center;    
+    font-family: 'Exo 2';
+}
+
+h1 {
+    font-family: 'Exo 2';
+    padding-top: 5px;
+}
+
+#shareButton{
+    font-family: 'Exo 2';
+    border-radius: 12px;
+    background-color: #39FF14;
+    font-weight: bold;
+}
+
+#confirmNameButton{
+    font-family: 'Exo 2';
+    border-radius: 12px;
+    background-color: #39FF14;
+    font-weight: bold;
+}
+
+#endShareButton{
+    font-family: 'Exo 2';
+    border-radius: 12px;
+    background-color: #39FF14;
+    font-weight: bold;
+}
+
+#leaderBoardButton{
+    font-family: 'Exo 2';
+    border-radius: 12px;
+    width: 150px;
+    padding: 7px;
+    background-color: #39FF14;
+    font-weight: bold;
+}
+
+#startRunButton{
+    font-family: 'Exo 2';
+    border-radius: 12px;
+    width: 150px;
+    padding: 7px;
+    background-color: #39FF14;
+    font-weight: bold;
+}
+
+#pauseButton{
+    font-family: 'Exo 2';
+    border-radius: 12px;
+    width: 150px;
+    padding: 7px;
+    background-color: #39FF14;
+    font-weight: bold;
+}
+
+#stopButton{
+    font-family: 'Exo 2';
+    border-radius: 12px;
+    width: 150px;
+    padding: 7px;
+    background-color: #39FF14;
+    font-weight: bold;
+}
+
+#resumeButton{
+    font-family: 'Exo 2';
+    border-radius: 12px;
+    width: 150px;
+    padding: 7px;
+    background-color: #39FF14;
+    font-weight: bold;
+}
+
+#closeLeaderboard{
+    font-family: 'Exo 2';
+    border-radius: 12px;
+    background-color: #39FF14;
+    font-weight: bold;
+}
+
+#startSession{
+    font-family: 'Exo 2';
+    border-radius: 12px;
+    background-color: #39FF14;
+    font-weight: bold;
+}
+
+#cancelSession{
+    font-family: 'Exo 2';
+    border-radius: 12px;
+    background-color: #39FF14;
+    font-weight: bold;
 }
 
 #map {
     width: 100%;
     height: 250px;
+    border: black;
+    border-style: solid;
+
 }
 
 #shareMap {
@@ -31,6 +127,7 @@ body {
 input[type="range"] {
     width: 100%;
     touch-action: manipulation;
+    accent-color:#39FF14;
 }
 
 .modal-content {
@@ -50,13 +147,13 @@ input[type="range"] {
 }
 
 #timeBar .run {
-    background-color: green;
+    background-color: #39FF14;
     height: 100%;
     border-right: 1px solid white;
 }
 
 #timeBar .walk {
-    background-color: blue;
+    background-color: gray;
     height: 100%;
     border-right: 1px solid white;
 }
@@ -105,4 +202,9 @@ svg {
 .leader {
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+}
+
+#timerModal{
+    text-align: center;
+    font-family: 'Exo 2';
 }
